2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
	* config/gnulib/* gnulib/*: Gnulib fix reflected into Amanda; see
	  http://www.mail-archive.com/bug-gnulib@gnu.org/msg19345.html

2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Recovery_Clerk.pl: re-use already-full changer
	  slots, to save space

2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm: fix make_combined_error
	* perl/Amanda/Changer/robot.pm: correctly set up polling for device
	  ready; use 'unknown', not 'device', as a reason; always return a
	  changer error, not a string

2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tape-aix.c device-src/tape-uware.c
	  device-src/tape-xenix.c: remove unmaintained, and apparently unused,
	  implementations
	* device-src/tape-posix.c device-src/tape-device.c: merge tape-posix.c
	* device-src/tape-device.h: remove
	* device-src/tape-ops.h: remove

	* config/amanda/tape.m4: don't look for AIX, Uware, or Xenix anymore
	* device-src/Makefile.am: remove tape ops conditionals

2010-09-01  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in: add check for unsetenv

2010-09-01  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: add Installcheck::Catalog and the
	  catalogs to the distribution

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amserverconfig.pl: skip the correct number of tests

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amserverconfig.pl: don't try running tape-changer if
	  MTX is not installed
	* server-src/amserverconfig.pl: create $CONFIG_DIR if required.  This
	  passes on my system and should pass on the Mac systems.

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* config/.gitignore: don't ignore these files
	* config/arg-nonnull.h config/c++defs.h config/warn-on-use.h: add
	  ignored, but required, gnulib files

2010-08-31  Dustin J. Mitchell <dustin@zmanda.com>
	* NEWS: note removal of changers