@@ -1,4 +1,8 @@
 2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
+	* ndmp-src/ndmpconnobj.c: When listening for a notify, do not hog the
+	  ndmlib_mutex
+
+2010-09-07  Dustin J. Mitchell <dustin@zmanda.com>
 	* config/gnulib/* gnulib/*: Gnulib fix reflected into Amanda; see
 	  http://www.mail-archive.com/bug-gnulib@gnu.org/msg19345.html
 
